# UoMe

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  compose.yaml
backend/: Dockerfile  alembic.ini  fly.toml  pyproject.toml
backend/app/: main.py
backend/app/auth/: auth_router.py  auth_schema.py  auth_service.py
backend/app/core/: db.py
backend/app/models/: models.py
backend/app/routers/: auth_router.py  expense_router.py  group_router.py
backend/app/schemas/: auth_schema.py  expenses_schema.py  group_schemas.py
backend/app/services/: auth_service.py  expense_service.py  group_service.py
backend/db/: env.py
backend/db/versions/: 39c4e44aa237_make_user_pw_nullable.py  4ca4ab8a1a32_add_image_to_user.py  514bb5c06dd9_create_user_table.py  57df34302711_create_group_and_usergroup_models.py  75e03ef5c579_create_user_table.py  bf1c51c0bbea_create_payment_model.py  ee4faf55f684_create_expense_and_expenseparticipant_.py
backend/tests/: .env.test  conftest.py  populate_db.py
backend/tests/auth_test/: auth_component_test.py  auth_router_test.py  conftest.py
backend/tests/expense/: expense_component_test.py  expense_router_test.py
backend/tests/group_test/: conftest.py  group_components_test.py  group_router_test.py
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  pyproject.toml  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  webpack.config.js
frontend/app/: main.py  util.py
frontend/app/subapps/: home_app.py  (+2 more)
frontend/src/: auth-config.ts  auth.ts
(+54 files in other folders)
