[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Jerónimo Mendes <jeronimo.m.mendes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
pydantic = "^2.7.1"
sqlmodel = "^0.0.18"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
passlib = "^1.7.4"
python-jose = "^3.3.0"
pytest = "^8.2.0"
sentry-sdk = "1.40.0"
google-auth = "^2.29.0"
requests = "^2.32.3"
debugpy = "^1.8.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
