[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Jerónimo Mendes <jeronimo.m.mendes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.34.0"
pydantic = "^2.7.1"
watchdog = "^4.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[server]
headless = true
runOnSave = true
fileWatcherType = "poll"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
